syntax = "proto3";

package app.v1;

option go_package = "github.com/ucpr/atlas-search-example/proto/go/v1;service";

message Post {
  string id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

message GetPostRequest {
  string id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message ListPostsRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message ListPostsResponse {
  repeated Post posts = 1;
  int64 total = 2;
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
  string author = 3;
}

message CreatePostResponse {
  Post post = 1;
}

service Service {
  rpc GetPost(GetPostRequest) returns (GetPostResponse) {}
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse) {}
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {}
}
